add class component(route to be fixed)

--- a/assets/app/navigator/navigator.component.html
+++ b/assets/app/navigator/navigator.component.html
@@ -22,8 +22,8 @@
         Classes <span class="caret"></span>
       </a>
       <ul class="dropdown-menu">
-        <li><a href="#">Children</a></li>
-        <li><a href="#">Adults</a></li>
+        <li><a routerLinkActive="active" [routerLink]="['/classes/children']">Children</a></li>
+        <li><a routerLinkActive="active" [routerLink]="['/classes/adults']">Adults</a></li>
         </ul>
     </li>
     <li><a routerLinkActive="active" [routerLink]="['/auth']">Authentication</a></li>
