--- a/assets/app/slider/slider.component.css
+++ b/assets/app/slider/slider.component.css
@@ -1,7 +1,6 @@
 .sliderItem img{
-/*	width: 60%;
-	height: auto;
-	margin-left: 20%;*/
+	margin-left: auto;
+	margin-right: auto;
 }
 
 #myCarousel{
