add staff/class components

--- a/assets/app/app.component.css
+++ b/assets/app/app.component.css
@@ -1,8 +1,8 @@
-#main {
-	width: 60%;
-    margin-left: 20%;
-}
 
+
+#app{
+  /*  background-image: url("/imgs/b.jpg");*/
+}
 h1 {
     color: red;
 }
