--- a/assets/app/app.component.html
+++ b/assets/app/app.component.html
@@ -1,6 +1,10 @@
-<h1>Hello World!</h1>
-<div id="main">
-<app-navigator></app-navigator>
-<router-outlet></router-outlet>
-<div>
+<div id="app">
+    <app-navigator></app-navigator>
 
+    <div class="content">
+        <router-outlet></router-outlet>
+    </div>
+
+    <app-footer></app-footer>
+
+</div>
