--- a/assets/app/home/home.component.html
+++ b/assets/app/home/home.component.html
@@ -1,3 +1,9 @@
 <div id="home">
-<app-slider></app-slider>
+    <div class="container animated zoomIn" style="text-align: center">
+        <div id="welcomeDiv">
+            <h1 class="welcomeLine animated">Welcome to Umistrong Art Studio </h1>
+            <h2 class="welcomeLine animated">and Art Store</h2>
+        </div>
+    </div>
+    <app-slider></app-slider>
 </div>
