--- a/assets/app/classes/classes.component.html
+++ b/assets/app/classes/classes.component.html
@@ -1,34 +1,14 @@
-<div class="row">
-  <div class="col-sm-6 col-md-4">
-    <div class="thumbnail">
-     <!--  <img src="..." alt="..."> -->
-      <div class="caption">
-        <h3>Thumbnail label</h3>
-        <p>...</p>
-        <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
-      </div>
-    </div>
-  </div>
+<div class="container">
+    <div class="alert alert-danger col-md-6 col-md-offset-3" role="alert" [hidden]="!isEmptyClasses">No Class Available</div>
+    <app-class [class]="classObj" *ngFor="let classObj of classes"></app-class>
+
 
     <div class="col-sm-6 col-md-4">
-    <div class="thumbnail">
-     <!--  <img src="..." alt="..."> -->
-      <div class="caption">
-        <h3>Thumbnail label</h3>
-        <p>...</p>
-        <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
-      </div>
+        <button type="button" class="btn btn-default btn-lg">
+            <a routerLinkActive="active" [routerLink]="['/addClass']">
+                <span class="glyphicon glyphicon-plus"></span>
+            </a>
+            Add a class
+        </button>
     </div>
-  </div>
-
-    <div class="col-sm-6 col-md-4">
-    <div class="thumbnail">
-     <!--  <img src="..." alt="..."> -->
-      <div class="caption">
-        <h3>Thumbnail label</h3>
-        <p>...</p>
-        <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
-      </div>
-    </div>
-  </div>
 </div>
