--- a/assets/app/navigator/navigator.component.css
+++ b/assets/app/navigator/navigator.component.css
@@ -1,3 +1,48 @@
 #brand{
-	width: "15%";
+	width: 100%;
+	height: 100%;
+}
+
+.navbar-brand{
+	padding: 0px 10px;
+	height: 100%;
+
+}
+
+.nav-tabs .active{
+	background-color: #2c27ff;
+	color: white;
+}
+
+.navbar-collapse{
+	width: 80%;
+	margin-left: 20%;
+	padding-top: 6%;
+}
+
+nav{
+	background-color: white;
+	font-size: 80%;
+	box-shadow: 0px 10px 10px lightsteelblue;
+}
+
+#navdiv{
+	position: relative;
+	height: 150px;
+}
+#brandContainer{
+	position: absolute;
+	bottom: 0;
+	width: 20%;
+	float: left;
+}
+
+#navBarContainer{
+	position: absolute;
+	bottom: 30px;
+	font-size: larger;
+	font-family: cursive
+}
+.nav>li>a{
+	padding: 10px;
 }
