--- a/assets/app/navigator/navigator.component.html
+++ b/assets/app/navigator/navigator.component.html
@@ -1,38 +1,45 @@
-  <div>
-  <nav>
-    <div class="container-fluid">
-        <div class="navbar-header">
-        <a class="navbar-brand" href="#">
-          <img id="brand" alt="Brand" src="/imgs/logo.jpg" style="width: 15%;">
-        </a>
+<div class="container mainContent">
+    <nav class="navbar-fixed-top">
+        <div id="navdiv" class="container">
+            <div id="brandContainer" class="container">
+                <div class="navbar-header">
+                    <a class="navbar-brand" href="#">
+                        <img id="brand" alt="Brand" src="/imgs/logo.jpg">
+                    </a>
+                </div>
+            </div>
+            <div id="navBarContainer" class="collapse navbar-collapse">
+                <form class="navbar-form navbar-right">
+                    <div class="input-group">
+                        <input type="text" class="form-control" placeholder="Search" style="width: 150px">
+
+                        <button type="submit" class="btn btn-default">
+                            <span class="glyphicon glyphicon-search"></span>
+                        </button>
+                    </div>
+
+                </form>
+                <ul class="nav nav-tabs navbar-right">
+                    <li role="presentation"><a routerLinkActive="active" [routerLink]="['/home']">Home<span
+                            class="sr-only">(current)</span></a></li>
+                    <li role="presentation"><a routerLinkActive="active" [routerLink]="['/about']">About Us</a></li>
+                    <li role="presentation" class="dropdown">
+                        <a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true"
+                           aria-expanded="false">
+                            Programs <span class="caret"></span>
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a routerLinkActive="active" [routerLink]="['/classes/children']">Children</a></li>
+                            <li><a routerLinkActive="active" [routerLink]="['/classes/adults']">Adults</a></li>
+                        </ul>
+                    </li>
+                    <li><a routerLinkActive="active" [routerLink]="['/gallery']">Art Gallery</a></li>
+                    <li><a routerLinkActive="active" [routerLink]="['/staffs']">Our Staffs</a></li>
+                    <li><a href="#">Products</a></li>
+                    <li><a routerLinkActive="active" [routerLink]="['/auth']">Authentication</a></li>
+
+                </ul>
+            </div>
         </div>
-    </div>
-    <div class="collapse navbar-collapse" style="margin-top: 40px; font-size: larger;font-family: cursive">
-      <form class="navbar-form navbar-right">
-      <div class="form-group">
-        <input type="text" class="form-control" placeholder="Search">
-      </div>
-      <button type="submit" class="btn btn-default">Submit</button>
-    </form>
-  <ul class="nav nav-tabs navbar-right">
-    <li role="presentation"><a routerLinkActive="active" [routerLink]="['/home']">Home<span class="sr-only">(current)</span></a> </li>
-    <li role="presentation"><a routerLinkActive="active" [routerLink]="['/about']">About</a></li>
-    <li role="presentation" class="dropdown">
-      <a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
-        Classes <span class="caret"></span>
-      </a>
-      <ul class="dropdown-menu">
-        <li><a routerLinkActive="active" [routerLink]="['/classes/children']">Children</a></li>
-        <li><a routerLinkActive="active" [routerLink]="['/classes/adults']">Adults</a></li>
-        </ul>
-    </li>
-    <li><a routerLinkActive="active" [routerLink]="['/auth']">Authentication</a></li>
-
-  </ul>
-  </div>
-</nav>
-
-  <h1>
-    {{title}}
-  </h1>
-  </div>
+    </nav>
+</div>
