--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,24 +1,23 @@
 body {
-  
+  padding-top: 160px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+ /* background-image: url("/imgs/background.jpg");*/
 }
 
 a {
   color: #00B7FF;
 }
 
-#appFooter{
-	background-color: darkblue;
-    margin-bottom: 30px;
-    margin-top: 30px;
-    box-shadow: 0px -5px 10px lightgray;
+.contentRow {
+  padding-left: 20%;
+  width: 60%;
 }
 
-.row{
-    color: white;
-    margin-left: 25%;
-    padding-top: 30px;
-    padding-bottom: 30px;
-    margin-bottom: 10px;
-    width: 60%;
+.content{
+  padding-top: 20px;
+}
+
+.thumbnail>img{
+  width: 300px;
+  height: 320px;
 }
