--- a/views/index.hbs
+++ b/views/index.hbs
@@ -9,39 +9,21 @@
     <title>Angular 2 Messenger</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     <link rel="stylesheet" href="/stylesheets/style.css">
+    <link rel="stylesheet" href="/stylesheets/animate.css">
+    <link href='//fonts.googleapis.com/css?family=Aladin' rel='stylesheet'>
+    <script src="https://rawgit.com/web-animations/web-animations-js/master/web-animations.min.js"></script>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
 <my-app>Loading ...</my-app>
 
-<div id="appFooter"> 
-      <footer>
-        <div class="row">
-          <div class="col-md-4">
-            <span class="glyphicon glyphicon-map-marker" aria-hidden="true"></span>
-            <p>Vist</p>
-            <p>My address</p>
-          </div>
-          <div class="col-md-4">
-            <span class="glyphicon glyphicon-phone-alt"></span>
-            <p>Call</p>
-            <p>+(65)8171-6671</p>
-          </div>
-          <div class="col-md-4">
-          	<span class="glyphicon glyphicon-envelope"></span>
-          	<p>Email</p>
-            <p>abcd@gmail.com</p>
-          </div>
-        </div>
 
-      </footer>
-</div>
-        <p class="pull-right"><a href="#">Back to top</a></p>
-        <p>&copy; 2016 Company, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
 
 
 <script src="/js/app/bundle.js"></script>
 <script src="/js/jquery.js"></script>
 <script src="/js/bootstrap.min.js"></script>
+
 
 </body>
 </html>
