--- a/assets/app/staff/staff-details.component.html
+++ b/assets/app/staff/staff-details.component.html
@@ -1,63 +1,46 @@
-<div class="col-sm-6 col-md-4">
-    <!--
-        <div class="thumbnail">
-            <img [src]=staff.profilePicUrl alt="teacher{{staff.staffName}}">
-            <div class="caption">
-                <h3>{{staff.staffName}}</h3>
-                <br/>
-                <p>{{staff.jobTitle}}</p>
-                <br/>
-                <hr/>
-                <br/>
-
-                <table>
-                    <tr><td>Country:</td><td>{{staff.country}}</td></tr>
-                    <tr><td>Year of Birth:</td><td>{{staff.dateOfBirth}}</td></tr>
-                </table>
-                <p><a (click)="onEdit()" class="btn btn-default" role="button" >Edit</a> <a (click)="onDelete()" class="btn btn-default" role="button">Delete</a></p>
-            </div>
+<div class="container" style="padding: 20px; font-family: cursive">
+    <div id="leftContent" class=".col-xs-6 .col-md-4" style="float: left">
+        <img [src]="staff.profilePicUrl" alt="profile picture">
+        <div class="caption">
+            <h4>{{staff.staffName}}</h4>
+            <h6>{{staff.jobTitle}}</h6>
         </div>
-    -->
 
+        <hr/>
+        <table class="contentTable">
+            <tr>
+                <td><strong>Country: </strong></td>
+                <td>{{staff.country}}</td>
+            </tr>
+            <tr>
+                <td><strong>Year of Birth:</strong></td>
+                <td>{{staff.dateOfBirth}}</td>
+            </tr>
+        </table>
+    </div>
+    <div id="rightContent" class=".col-xs-12 .col-md-8">
+        <table class="contentTable" style="margin-left: 30%">
+            <tr>
+                <td><strong>Degree: </strong></td>
+                <td>{{staff.degree}}</td>
+            </tr>
+            <tr>
+                <td><strong>Experience: </strong></td>
+                <td>{{staff.experience}}</td>
+            </tr>
+            <tr>
+                <td><strong>Details: </strong></td>
+                <td>{{staff.details}}</td>
+            </tr>
+        </table>
+    </div>
 
-    <md-card>
-        <img [src]=staff.profilePicUrl class="md-card-image" alt="Washed Out">
-        <md-card-title-group style="margin-top: 10px">
-            <md-card-title>
-                {{staff.staffName}}
-            </md-card-title>
-            <md-card-subtitle>{{staff.jobTitle}}</md-card-subtitle>
-        </md-card-title-group>
-        <md-card-content>
-            <div style="white-space: pre-line">
-                {{staff.details}}
-            </div>
-        </md-card-content>
-
-        <md-card-actions>
-            <button md-button>Like</button>
-            <button md-button>Share</button>
-
-        </md-card-actions>
-        <p><a (click)="onEdit()" class="btn btn-default" role="button">Edit</a> <a (click)="onDelete()"
-                                                                                   class="btn btn-default"
-                                                                                   role="button">Delete</a></p>
-
-        <!--        <button md-button layout="row" layout-align="end center">
-                    <md-button class="md-icon-button" aria-label="Favorite">
-                        <md-icon md-svg-icon="img/icons/favorite.svg"></md-icon>
-                    </md-button>
-                    <md-button class="md-icon-button" aria-label="Settings">
-                        <md-icon md-svg-icon="img/icons/menu.svg"></md-icon>
-                    </md-button>
-                    <md-button class="md-icon-button" aria-label="Share">
-                        <md-icon md-svg-icon="img/icons/share-arrow.svg"></md-icon>
-                    </md-button>
-                </button>-->
-    </md-card>
 
 </div>
-
-<div id="staffEdit">
-    <app-staff-input [hidden]="isHideInput" [staff]="staff"></app-staff-input>
+<div class="container">
+    <a role="button" class="btn-default btn" [routerLink]="['/staffs']">
+        All Staffs
+        <span class="glyphicon glyphicon-arrow-left"></span>
+    </a>
 </div>
+
