--- a/assets/app/staff/staff-input.component.html
+++ b/assets/app/staff/staff-input.component.html
@@ -39,7 +39,7 @@
                             id="birthDate"
                             class="form-control"
                             [ngModel]="staff?.dateOfBirth"
-                            name="text"
+                            name="birthDate"
                     >
                 </div>
 
@@ -81,13 +81,13 @@
 
             <div class="form-group">
                 <label for="experience">Experience</label>
-                <input
-                        type="text"
+                <textarea
                         id="experience"
                         class="form-control"
                         [ngModel]="staff?.experience"
                         name="experience"
-                >
+                        style="height:100px;"
+                ></textarea>
             </div>
 
             <div class="form-group">
