--- a/assets/app/classes/class-input.component.html
+++ b/assets/app/classes/class-input.component.html
@@ -59,6 +59,17 @@
                         required>
             </div>
 
+             <div class="form-group">
+                <label for="picURL">Picture URL</label>
+                <input
+                        type="text"
+                        id="picURL"
+                        class="form-control"
+                        [ngModel]="class?.picURL"
+                        name="picURL"
+                        required>
+            </div>
+
             <div class="form-group">
                 <label for="description">Description</label>
                 <input
