--- a/assets/app/about/about.component.css
+++ b/assets/app/about/about.component.css
@@ -5,6 +5,8 @@
 
 }
 
+
+
 .middle {
     transition: .5s ease;
     opacity: 0;
@@ -30,8 +32,12 @@
 .col-sm-4:hover .focus {
     opacity: 0.3;
     box-shadow: 5px 2px 8px 0 rgba(0, 0, 0, 0.4), 0 10px 20px 0 rgba(0, 0, 0, 0.4);
-    width: 302px;
-    height: 302px;
+/*    width: 302px;
+    height: 302px;*/
+
+    -webkit-transform: scale(1.1);
+    -moz-transform: scale(1.1);
+    -o-transform: scale(1.1);
 }
 
 .text {
