--- a/assets/app/classes/class.component.html
+++ b/assets/app/classes/class.component.html
@@ -1,6 +1,8 @@
 <div class="col-sm-6 col-md-4">
     <div class="thumbnail">
-        <!--  <img src="..." alt="..."> -->
+    <div ng-if="!class.picURL">
+            <img [src]=class.picURL class="md-card-image" alt="Washed Out" style="width: 100%; height: 261px; display: block; margin: auto">
+        </div>
         <div class="caption">
             <h3>{{class.className}}</h3>
             <br/>
