--- a/assets/app/home/home.component.html
+++ b/assets/app/home/home.component.html
@@ -1,9 +1,15 @@
 <div id="home">
-    <div class="container animated zoomIn" style="text-align: center">
+    <div class="container animated slideInDown" style="text-align: center">
         <div id="welcomeDiv">
             <h1 class="welcomeLine animated">Welcome to Umistrong Art Studio </h1>
             <h2 class="welcomeLine animated">and Art Store</h2>
         </div>
     </div>
     <app-slider></app-slider>
+
+    <div class="container">
+        <p>Visit our art stores here to find out various art materials</p>
+    <app-about-store></app-about-store>
+    </div>
+
 </div>
