--- a/assets/app/navigator/navigator.component.css
+++ b/assets/app/navigator/navigator.component.css
@@ -3,6 +3,23 @@
 	height: 100%;
 }
 
+#navTop{
+	position: fixed;
+	top: 0;
+	width: 100%;
+	z-index: 1000;
+	padding-left: 0;
+	padding-right: 0;
+}
+
+#brand2{
+	width: 150px;
+	height: 150px;
+	z-index: 1500;
+	position: absolute;
+	margin-left: 20%;
+}
+
 .navbar-brand{
 	padding: 0px 10px;
 	height: 100%;
@@ -16,32 +33,40 @@
 
 .navbar-collapse{
 	width: 80%;
-	margin-left: 20%;
 	padding-top: 6%;
 }
 
 nav{
+
 	background-color: white;
 	font-size: 80%;
-	box-shadow: 0px 10px 10px lightsteelblue;
+	height: 150px;
+	
 }
 
 #navdiv{
-	position: relative;
+	position: fixed;
 	height: 150px;
+	padding-left: 20%;
+	width: 100%;
+	box-shadow: 0px 5px 5px -5px lightsteelblue;
+	background-color: aliceblue;
 }
 #brandContainer{
 	position: absolute;
 	bottom: 0;
-	width: 20%;
+	width: 17%;
 	float: left;
 }
 
 #navBarContainer{
 	position: absolute;
 	bottom: 30px;
-	font-size: larger;
-	font-family: cursive
+	font-size: 15px;
+	font-family: cursive;
+	margin-left: 230px;
+	margin-right: 200px;
+
 }
 .nav>li>a{
 	padding: 10px;
