--- a/assets/app/slider/slider.component.css
+++ b/assets/app/slider/slider.component.css
@@ -5,6 +5,11 @@
     width: auto;
 }
 
+.container{
+    width: 100%;
+    margin: 0px;
+}
+
 #myCarousel{
 	box-shadow: 5px 2px 8px 0 rgba(0, 0, 0, 0.2), 0 10px 20px 0 rgba(0, 0, 0, 0.19);
     width: 96%;
