update server side

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -13,6 +13,7 @@
     <link href='//fonts.googleapis.com/css?family=Aladin' rel='stylesheet'>
     <script src="https://rawgit.com/web-animations/web-animations-js/master/web-animations.min.js"></script>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
 </head>
 <body>
 <my-app>Loading ...</my-app>
