--- a/assets/app/about/about.component.css
+++ b/assets/app/about/about.component.css
@@ -2,6 +2,7 @@
     width: 300px;
     height: 300px;
     backface-visibility: hidden;
+    margin: auto;
 
 }
 
@@ -12,7 +13,7 @@
     opacity: 0;
     position: absolute;
     top: 140px;
-    left: 160px;
+    left: 190px;
     transform: translate(-50%, -50%);
     -ms-transform: translate(-50%, -50%)
 }
