--- a/assets/app/classes/class.component.html
+++ b/assets/app/classes/class.component.html
@@ -1,7 +1,15 @@
 <div class="col-sm-6 col-md-4">
     <div class="thumbnail">
     <div ng-if="!class.picURL">
+            <div id="imgDiv">
             <img [src]=class.picURL class="md-card-image" alt="Washed Out" style="width: 100%; height: 261px; display: block; margin: auto">
+            <div id="viewClass">    
+                <a href=""><span class="glyphicon glyphicon-search"></span>  </a>
+
+                
+            </div>
+            </div>
+            
         </div>
         <div class="caption">
             <h3>{{class.className}}</h3>
