--- a/assets/app/home/home.component.css
+++ b/assets/app/home/home.component.css
@@ -38,3 +38,10 @@
     margin-left: 2%;
     margin-top: 2%
 } 
+
+h1{
+    text-align: center;
+    font-family: sans-serif;
+    font-size: 2em;
+    color: #2b5b77;
+}
