--- a/assets/app/home/home.component.html
+++ b/assets/app/home/home.component.html
@@ -1,15 +1,24 @@
 <div id="home">
-    <div class="container animated slideInDown" style="text-align: center">
+<!--     <div class="container animated slideInDown" style="text-align: center">
         <div id="welcomeDiv">
             <h1 class="welcomeLine animated">Welcome to Umistrong Art Studio </h1>
             <h2 class="welcomeLine animated">and Art Store</h2>
         </div>
-    </div>
+    </div> -->
     <app-slider></app-slider>
 
-    <div class="container">
-        <p>Visit our art stores here to find out various art materials</p>
+    <div class="container" style="padding-top: 5%">
+        <h1><strong>Visit our art stores here to find out various art materials</strong> </h1>
+        <div style="margin-top: 7%">
     <app-about-store></app-about-store>
+    </div>
+    </div>
+
+    <div >
+        <div class="container" style="padding-top: 5%">
+            <h1><strong>Our Staffs</strong> </h1>
+            <app-staffs-snap></app-staffs-snap>
+        </div>
     </div>
 
 </div>
